--- a/vue/package.json
+++ b/vue/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "prettier --write ."
   },
   "dependencies": {
     "axios": "^0.25.0",
@@ -21,6 +21,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "prettier": "2.8.3",
     "vue-template-compiler": "^2.6.11",
     "webpack-inject-plugin": "^1.5.5"
   }
