Refactoring the Nugget view page

--- a/vue/package.json
+++ b/vue/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "debounce": "^1.2.1",
+    "iframe-resizer": "^4.3.6",
     "moment": "^2.29.4",
     "vue": "^2.6.11",
     "vue-simple-suggest": "^1.11.2"
